force-app/main/default/objects/OEM_Spare_Tracker__c/OEM_Spare_Tracker__c.object-meta.xml
<CustomObject>
    <label>OEM Spare Tracker</label>
    <nameField>
        <label>OEM Spare Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OEM Spare Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>