force-app/main/default/objects/OEM_Spare_Tracker__c/fields/Expecting_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Expecting_Arrival_Date__c</fullName>
    <label>Expecting Arrival Date</label>
    <type>Date</type>
</CustomField>