force-app/main/default/objects/OEM_Spare_Tracker__c/fields/PO_issue_date__c.field-meta.xml
<CustomField>
    <fullName>PO_issue_date__c</fullName>
    <label>PO Issue Date</label>
    <type>Date</type>
</CustomField>