force-app/main/default/objects/OEM_Spare_Tracker__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OEM Spare Tracker</relationshipLabel>
    <relationshipName>OEM_Spare_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>