force-app/main/default/objects/OEM_Spare_Tracker__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>OEM/Service Supporter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OEM Spare Tracker (Supplier Name)</relationshipLabel>
    <relationshipName>OEM_Spare_Tracker1</relationshipName>
    <type>Lookup</type>
</CustomField>